<resources>
    <string name="app_name">AAGProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back">Back</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>

    <string name="movie_pg_rate">13+</string>
    <string name="movie_title">Avengers:<br />End Game</string>
    <string name="movie_tags">Action, Adventures, Fantasy</string>
    <string name="movie_reviews">125 REVIEWS</string>
    <string name="movie_storyline_title">Storyline</string>
    <string name="movie_storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="movie_cast_title">Cast</string>
    <string name="movie_actor1_name">Robert Downey Jr.</string>
    <string name="movie_actor2_name">Chris Evans</string>
    <string name="movie_actor3_name">Mark Ruffalo</string>
    <string name="movie_actor4_name">Chris Hemsworth</string>
</resources>