<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:forceDarkAllowed="false"
    android:orientation="horizontal"
    android:background="#191926"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/Mask"
            android:contentDescription="@string/movie_title"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:background="#191926"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orig" />

        <ImageView
            android:id="@+id/path"
            android:contentDescription="@string/back"
            android:layout_width="6dp"
            android:layout_height="10dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="61dp"
            android:src="@drawable/ic_path"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:text="@string/back"
            android:textColor="#6D6D80"
            app:layout_constraintStart_toEndOf="@id/path"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pg_rate"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:text="@string/movie_pg_rate"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/movie_title"
            android:textColor="#ECECEC"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pg_rate" />

        <TextView
            android:id="@+id/tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/movie_tags"
            android:textColor="#FF3466"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <LinearLayout
            android:id="@+id/layoutReview"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tags"
            app:layout_constraintStart_toStartOf="parent"
            >

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="4"
            android:theme="@style/rating"
            android:layout_gravity="center"
             />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/movie_reviews"
            android:textColor="@color/star_normal"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_gravity="center"
            />
        </LinearLayout>

        <TextView
            android:id="@+id/story_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_storyline_title"
            android:textColor="#ECECEC"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@id/layoutReview"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_storyline"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/story_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_cast_title"
            android:textColor="#ECECEC"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/storyline"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:id="@+id/actor1_img"
            android:contentDescription="@string/movie_actor1_name"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/movie_actor1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cast"
            />
        <TextView
            android:id="@+id/actor1_name"
            android:layout_width="80dp"
            android:layout_marginTop="6dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_actor1_name"
            android:textColor="#D8D8D8"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/actor1_img"
            app:layout_constraintTop_toBottomOf="@id/actor1_img"
            />

        <ImageView
            android:id="@+id/actor2_img"
            android:contentDescription="@string/movie_actor2_name"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/movie_actor2"
            app:layout_constraintStart_toEndOf="@id/actor1_img"
            app:layout_constraintTop_toBottomOf="@id/cast"
            />
        <TextView
            android:id="@+id/actor2_name"
            android:layout_width="80dp"
            android:layout_marginTop="6dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_actor2_name"
            android:textColor="#D8D8D8"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/actor2_img"
            app:layout_constraintTop_toBottomOf="@id/actor2_img"
            />

        <ImageView
            android:id="@+id/actor3_img"
            android:contentDescription="@string/movie_actor3_name"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/movie_actor3"
            app:layout_constraintStart_toEndOf="@id/actor2_img"
            app:layout_constraintTop_toBottomOf="@id/cast"
            />
        <TextView
            android:id="@+id/actor3_name"
            android:layout_width="80dp"
            android:layout_marginTop="6dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_actor3_name"
            android:textColor="#D8D8D8"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/actor3_img"
            app:layout_constraintTop_toBottomOf="@id/actor3_img"
            />

        <ImageView
            android:id="@+id/actor4_img"
            android:contentDescription="@string/movie_actor4_name"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/movie_actor4"
            app:layout_constraintStart_toEndOf="@id/actor3_img"
            app:layout_constraintTop_toBottomOf="@id/cast"
            />
        <TextView
            android:id="@+id/actor4_name"
            android:layout_width="80dp"
            android:layout_marginTop="6dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_actor3_name"
            android:textColor="#D8D8D8"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/actor4_img"
            app:layout_constraintTop_toBottomOf="@id/actor4_img"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>